--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 500vh;
+}
+
 .App {
-  text-align: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll; /* Enables scrolling for the page content */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+canvas {
+  position: fixed; /* Fix canvas to viewport */
+  top: 0;
+  left: 0;
+  width: 100%; /* Ensure it takes the full width */
+  height: 100%; /* Ensure it takes the full height */
+  z-index: -1; /* Keep canvas behind other content */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-wrapper {
+  position: fixed;
+  z-index: 1; /* Keep content in front of the canvas */
+  margin-top: 20px;
+  padding-bottom: 20px;
 }
