--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,34 @@
 body, html {
   margin: 0;
   padding: 0;
-  height: 500vh;
+  height: 200vh;
+  background-color: black;
 }
 
 .App {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll; /* Enables scrolling for the page content */
-}
-
-canvas {
-  position: fixed; /* Fix canvas to viewport */
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%; /* Ensure it takes the full width */
-  height: 100%; /* Ensure it takes the full height */
-  z-index: -1; /* Keep canvas behind other content */
+  width: 100%;
+  height: 100vh; /* Enable vertical scrolling */
 }
 
-.content-wrapper {
+.scanlines {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: repeating-linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0,
+    rgba(0, 0, 0, 0.15) 1px,
+    rgba(0, 0, 0, 0) 2px
+  );
+  z-index: 1;
+  pointer-events: none;
+}
+
+.content-wrapper{
   position: fixed;
-  z-index: 1; /* Keep content in front of the canvas */
-  margin-top: 20px;
-  padding-bottom: 20px;
 }
