--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,98 @@
 body, html {
   margin: 0;
   padding: 0;
-  height: 200vh;
-  background-color: black;
+  min-height: 100%;
+  font-family: Arial, sans-serif;
+  overflow-x: hidden;
 }
 
-.App {
-  position: fixed;
-  top: 0;
+
+.App {  
+  padding: 0 !important;
+  margin: 0;
+  width: 100vw;
   left: 0;
-  width: 100%;
-  height: 100vh; /* Enable vertical scrolling */
+  min-height: 100vh; /* Allows dynamic height for scrolling */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 20px;
+  background: rgb(48, 48, 48); /* Darker grey background */
+  position: relative; /* Positioning for the pseudo-element */
+  animation: flicker_screen 1.5s infinite;
 }
 
-.scanlines {
+.curved-text-container {
+  position: relative;
+  perspective: 800px;
+  text-align: center;
+  width: fit-content;
+}
+
+.curved-line {
+  display: flex;
+  justify-content: center;
+}
+
+.curved-text-letter {
+  display: inline-block;
+  white-space: pre;
+  transition: transform 0.3s ease;
+  font-family: 'VT323', monospace; /* Apply to the curved text */
+  color: rgb(255, 255, 255); /* Optional */
+}
+
+
+@keyframes flicker_screen {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+    opacity: 1;
+  }
+  20%, 24%, 55% {
+    opacity: 0.98;
+  }
+}
+
+/* Adding darker background with screenlines */
+#root:after {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
   width: 100%;
-  background-image: repeating-linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0) 0,
-    rgba(0, 0, 0, 0.15) 1px,
-    rgba(0, 0, 0, 0) 2px
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9); /* Darker background with higher opacity */
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0) 70%, /* Darker transparent center */
+    rgba(0, 0, 0, 1) 100%
   );
-  z-index: 1;
-  pointer-events: none;
+  z-index: 2;
 }
 
-.content-wrapper{
-  position: fixed;
+#root:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
+    linear-gradient(
+      90deg,
+      rgba(255, 0, 0, 0.06),
+      rgba(0, 255, 0, 0.02),
+      rgba(0, 0, 255, 0.06)
+    );
+  background-size: 100% 4px, 30px 100%;
+  z-index: 3;
+  animation: flicker_screen 100ms infinite;
+}
+
+@media only screen and (min-width: 600px) {
+  .title{
+
+
+    left: -10vw;
+  }
 }
