--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body, html {
     opacity: 1;
   }
   20%, 24%, 55% {
-    opacity: 0.98;
+    opacity: 0.99;
   }
 }
 
@@ -86,7 +86,7 @@ body, html {
     );
   background-size: 100% 4px, 30px 100%;
   z-index: 3;
-  animation: flicker_screen 100ms infinite;
+  animation: flicker_screen 1.5s infinite;
 }
 
 @media only screen and (min-width: 600px) {
