--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body, html {
   padding: 0 !important;
   margin: 0;
   width: 100vw;
+  height: ;
   left: 0;
   min-height: 100vh; /* Allows dynamic height for scrolling */
   display: flex;
@@ -91,8 +92,12 @@ body, html {
 
 @media only screen and (min-width: 600px) {
   .title{
-
-
+    width: 10px;
     left: -10vw;
   }
+}
+
+.subtitle-wrapper{
+  position: absolute;
+  top: 40vh;
 }
