--- a/src/pages/home/App.css
+++ b/src/pages/home/App.css
@@ -5,7 +5,9 @@ body, html {
   height: 100%;
   font-family: Arial, sans-serif;
   background-color: rgb(255, 255, 255);
+  overflow-x: hidden;
 }
+
 
 /* .arrow-right{
   position: relative;
