--- a/src/pages/contacts/contact.css
+++ b/src/pages/contacts/contact.css
@@ -18,6 +18,8 @@
     -ms-user-select: none;
 }
 
+
+
 .icons img:hover{
     scale:1.5;
 }
@@ -32,6 +34,7 @@
     gap: 10px;
     align-items: center;
     height: 100vh;
+    background-color:rgb(255, 253, 247);
     flex-direction: column;
     justify-content: center;
 }
